# shelfmark

./: .gitignore  .pre-commit-config.yaml  BUG_ANALYSIS.md  Dockerfile  Makefile  docker-compose.dev.extbp.yml  docker-compose.dev.tor.yml  docker-compose.dev.wireguard.yml  docker-compose.dev.yml  docker-compose.test-booklore.yml  docker-compose.test-clients.yml  entrypoint.sh  genDebug.sh  pyproject.toml  readme.md  release-notes-v1.1.0.md  requirements-base.txt  requirements-shelfmark.txt  tor.sh  wireguard.sh
.basedpyright/: baseline.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-publish-docker-image.yml  ci.yml  codeql.yml  e2e-platform.yml
compose/: docker-compose.lite.yml  docker-compose.tor.yml  docker-compose.wireguard.yml  docker-compose.yml
compose/edge/: docker-compose.lite.yml  docker-compose.tor.yml  docker-compose.yml
compose/stable/: docker-compose.lite.yml  docker-compose.yml
cwa_book_downloader/: main.py
cwa_book_downloader/bypass/: internal_bypasser.py
data/: book-languages.json
docs/: configuration.md  custom-scripts.md  custom-sources.md  environment-variables.md  example_custom_source.py  index.md  installation.md  oidc.md  release-sources-plugin-guide.md  reverse-proxy.md  url-search-parameters.md  users-and-requests.md
scripts/: bypasser_permission_lab.sh  check-no-direct-useeffect.sh  fix_permissions.py  generate_env_docs.py  sync_hardcover_wishlist.py  test_clients.py
shelfmark/: __main__.py  main.py
src/: README.md
tests/: README.md  conftest.py
(+485 files in other folders)
