[project]
name = "shelfmark"
version = "0.1.0"
description = "Shelfmark - Book Downloader"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]
markers = [
    "integration: marks tests that require running services (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end tests that require the full application stack",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
extend-exclude = [".local"]

[tool.ruff.lint]
select = ["F", "I", "UP", "B", "C4"]
ignore = ["UP035"]

[tool.vulture]
paths = ["shelfmark"]
exclude = [".local", "tests"]
ignore_decorators = [
    "@app.route",
    "@app.before_request",
    "@app.after_request",
    "@app.errorhandler",
    "@socketio.on",
    "@register_provider",
    "@register_provider_kwargs",
    "@register_settings",
    "@register_source",
    "@register_handler",
    "@register_client",
    "@register_output",
]
min_confidence = 90
sort_by_size = true
